--- a/letter.html
+++ b/letter.html
@@ -55,7 +55,7 @@
           you are wonderfully authentic and unapologetically yourself.
         </p>
 
-        <p class="center">UntoldCoding</p>
+        <p class="center">I CAN'T HELP FALLING IN LOVE WITHYOU </p>
 
         <p>
           Please take your time to consider my proposal, and know that no matter
@@ -65,9 +65,9 @@
 
         <p>With all my love and admiration,</p>
 
-        <p class="center">ab left ka indicator dekr right ho&hellip;</p>
+        <p class="center">I CAN'T FORGET YOU</p>
 
-        <p>apka pyara</p>
+        <p>YOUR'S MR BHOOT , MAYO</p>
       </div>
     </div>
   </body>
