--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        I can't forget you
         <br />
         <span class="spoiler-text">
-          <a href="letter.html">Click Here</a>
+          <a href="letter.html">click here</a>
         </span>
         <span class="panel" tabindex="0"></span>
       </p>
