--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
       <p>
         You Know What ? <br />
-       I can't forget you
+     
         <br />
         <span class="spoiler-text">
-          <a href="letter.html">click here</a>
+          <a href="letter.html"> I can't forget you <br>click here</a>
         </span>
         <span class="panel" tabindex="0"></span>
       </p>
