--- a/letter.html
+++ b/letter.html
@@ -57,6 +57,8 @@
         <p class="center">I CAN'T FORGET YOU</p>
 
         <p>YOUR'S MR BHOOT , MAYO</p>
+        <a href="gift.html">gift for you
+        </a>
       </div>
     </div>
   </body>
