--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      
         <br />
         <span class="spoiler-text">
-          <a href="letter.html"> I can't forget you <br>click here</a>
+          <a href="letter.html"> thankyou for being there everytime with me <br>click here</a>
         </span>
         <span class="panel" tabindex="0"></span>
       </p>
