--- a/letter.html
+++ b/letter.html
@@ -31,8 +31,9 @@
 
         <p>Lemme gather the courage to say things in front of you!</p>
 
-        <p>
-          
+        <p>You are the brightest star in my constellation,<br>
+          guiding me through life's journey with your<br> 
+          unwavering light and unwavering love.
         </p>
 
         <p>
